--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#373A43"
         android:text="1"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.049"
@@ -26,6 +27,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#373A43"
         android:text="2"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.321"
@@ -39,6 +41,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#373A43"
         android:text="3"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.594"
@@ -52,6 +55,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#373A43"
         android:text="4"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.049"
@@ -65,6 +69,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#373A43"
         android:text="5"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.321"
@@ -78,6 +83,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#373A43"
         android:text="6"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.594"
@@ -91,6 +97,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#373A43"
         android:text="7"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.049"
@@ -104,6 +111,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#373A43"
         android:text="8"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.321"
@@ -117,6 +125,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#373A43"
         android:text="9"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.594"
@@ -130,6 +139,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#373A43"
         android:text="0"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.049"
@@ -143,6 +153,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#373A43"
         android:text="."
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.321"
@@ -155,6 +166,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#373A43"
+        android:textColor="#FFFFFF"
         app:icon="@drawable/baseline_backspace_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -169,6 +181,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#373A43"
         android:text="+"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.866"
@@ -182,6 +195,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#373A43"
         android:text="="
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.866"
@@ -195,6 +209,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#373A43"
         android:text="-"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.866"
@@ -242,6 +257,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#373A43"
         android:text="*"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.866"
@@ -255,6 +271,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#373A43"
         android:text="/"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.866"
@@ -268,6 +285,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#373A43"
         android:text="^"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.594"
@@ -281,6 +299,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#2C3E28"
         android:text="AC"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.049"
