--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.Calculator" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="Theme.Calculator" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- ... outros estilos ... -->
+        <item name="android:statusBarColor">#232323</item>
     </style>
-
-    <style name="Theme.Calculator" parent="Base.Theme.Calculator" />
 </resources>
