--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -208,10 +208,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="116dp"
-        android:clickable="false"
         android:cursorVisible="true"
-        android:focusable="false"
-        android:longClickable="false"
         android:maxLength="13"
         android:textAlignment="textEnd"
         android:textColor="#FFFFFF"
@@ -221,7 +218,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.954"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="TextViewEdits" />
 
     <TextView
         android:id="@+id/txtResultado"
